@@ -6,12 +6,12 @@ import de.ossi.data.CustomerDTO;
 import de.ossi.data.CustomerEntity;
 import lombok.RequiredArgsConstructor;
 
+import javax.inject.Inject;
 import java.util.List;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 
 @SingleResponsibility
-@RequiredArgsConstructor
+@RequiredArgsConstructor(onConstructor_ = @Inject)
 public class CustomerConverter implements BiFunction<CustomerEntity, String, CustomerDTO> {
 
     private final AddressConverter addressConverter;
@@ -22,7 +22,7 @@ public class CustomerConverter implements BiFunction<CustomerEntity, String, Cus
         List<AddressDTO> addressDTOS = customerEntity.addresses()
                                                      .stream()
                                                      .map(a -> addressConverter.apply(a, s, Integer.valueOf(s)))
-                                                     .collect(Collectors.toList());
+                                                     .toList();
         return new CustomerDTO(customerEntity.name(), "customer" + s, addressDTOS);
     }
 }
